--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -5,4 +5,57 @@
 	display: inline-block;
 	position: relative;
 	cursor: pointer;
+	text-transform: uppercase;
+	margin-bottom: -3.5px;
+}
+
+.copy-button {
+	width: 100px;
+	height: 30px;
+	position: absolute;
+	display: inline-block;
+	top: 50%;
+	left: 50%;
+	margin-left: -50px;
+	margin-top: -15px;
+	text-align: center;
+	outline: none;
+	background: rgba(255, 255, 255, 0.3);
+	font-size: 1rem;
+	line-height: 30px;
+	color: #fff;
+	text-transform: uppercase;
+	border: none;
+	opacity: 0;
+	cursor: pointer;
+}
+
+.ColorBox:hover .copy-button {
+	opacity: 1;
+	transition: 0.5s;
+}
+
+.box-content {
+	position: absolute;
+	width: 100%;
+	left: 0px;
+	bottom: 0px;
+	padding: 10px;
+	color: black;
+	letter-spacing: 1px;
+	font-size: 12px;
+}
+
+.see-more {
+	background: rgba(255, 255, 255, 0.3);
+	position: absolute;
+	border: none;
+	outline: none;
+	right: 0px;
+	bottom: 0px;
+	color: white;
+	width: 60px;
+	height: 30px;
+	text-align: center;
+	line-height: 30px;
 }
