--- a/src/Palette.css
+++ b/src/Palette.css
@@ -1,22 +1,22 @@
-.Palette {
+/* .Palette {
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
-}
-
+} */
+/* 
 .Palette-colors {
 	height: 90vh;
-}
+} */
 
-.Palette-footer {
+/* .Palette-footer {
 	height: 4vh;
 	background-color: white;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
 	font-weight: bold;
-}
-.emoji {
+} */
+/* .emoji {
 	font-size: 1.5rem;
 	margin-right: 1rem;
-}
+} */
